# advent-of-code

./: .gitignore  go.mod  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
2023/rust/day-01/: Cargo.toml
2023/rust/day_01/: Cargo.toml
2023/rust/day_01/src/: lib.rs  util.rs
2023/rust/day_01/src/common/: mod.rs
2023/rust/day_01/src/util/: fetch.rs
2023/rust/day_02/: Cargo.toml
2023/rust/day_02/src/: util.rs
src/go/: go.mod
src/go/2022/01/: p1.go  p1_test.go
src/go/2022/02/: p1.go  p1.input  p1_test.go
src/typescript/2022/01/: p1.spec.ts  p1.ts
src/typescript/2022/02/: p1.spec.ts  p1.ts
