[package]
name = "day_01"
version = "0.1.0"
edition = "2021"
authors = ["Carlos De La Cruz <heyimcarlos.dev@gmail.com>"]
license = "MIT"
description = "Advent of Code 2022 - Day 01"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }

[[bin]]
name = "common"
path = "src/common/mod.rs"
