[package]
name = "day_02"
version = "0.1.0"
edition = "2021"
authors = ["Carlos De La Cruz <heyimcarlos.dev@gmail.com>"]
license = "MIT"
description = "Advent of Code 2022 - Day 01"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
reqwest = "0.11.24"
tokio = {version = "1.36.0", features = ["full"]}
